public/theme.css
html {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}
*, *:before, *:after {
    -webkit-box-sizing: inherit;
    -moz-box-sizing: inherit;
    box-sizing: inherit;
}

*{
    font-family: 'Poppins', sans-serif;
}

.background-image{
    background-image: url("/img/mountain-background.jpg");
    background-repeat: no-repeat;
    position: fixed;
    -webkit-background-size: 200% auto;
    -moz-background-size: 200% auto;
    -o-background-size: 200% auto;
    background-size: 200% auto;
}

a, button {
    font-weight: bold;
}

/*********** GREEN/PURPLE ***************/
.green-purple .main-background-overlay{
    background-color: rgba(16, 165, 165, 0.67);
    color: #fff;
}

.green-purple .main-background--solid{
    background-color: rgba(16, 165, 165, 1);
    color: #fff;
}

.green-purple li:before, .green-purple .li {
    color: rgb(16, 165, 165);
}

.green-purple .secondary-background--overlay {
    background-color: rgba(159, 73, 235, 0.67);
    color: #fff;
}

.green-purple .secondary-background--light-overlay {
    background-color: rgba(159, 73, 235, 0.2);
}

.green-purple .secondary-background--solid {
    background-color: rgba(159, 73, 235, 1);
    color: #fff;
}

.green-purple input:checked + label{
    background-color: rgba(159, 73, 235, 0.7);
}
.green-purple a {
    color: #fff;
}

.green-purple .icon {
    fill: #fff;
}

/*********** YELLOW/RED ***************/
.yellow-red .main-background-overlay{
    background-color: rgba(255, 188, 10, 0.67);
    color: #7c2727;
}

.yellow-red .main-background--solid{
    background-color: rgba(255, 188, 10, 1);
    color: #7c2727;
}

.yellow-red li:before, .yellow-red .li {
    color: rgb(255, 188, 10);
}

.yellow-red .secondary-background--overlay {
    background-color: rgba(236, 8, 104, 0.67);
    color: #fff;
}

.yellow-red .secondary-background--light-overlay {
    background-color: rgba(236, 8, 104, 0.2);
    color: #fff;
}

.yellow-red .secondary-background--solid {
    background-color: rgba(236, 8, 104, 1);
    color: #fff;
}

.yellow-red input:checked + label{
    background-color: rgba(236, 8, 104, 0.7);
}

.yellow-red a {
    color: #7c2727;
}

.yellow-red .icon {
    fill: #7c2727;
}


/*********** BLUE/GREEN ***************/
.blue-green .main-background-overlay{
    background-color: rgba(46, 41, 78, 0.67);
    color: #fff;
}

.blue-green .main-background--solid{
    background-color: rgba(46, 41, 78, 1);
    color: #fff;
}

.blue-green li:before, .blue-green .li {
    color: rgb(46, 41, 78);
}

.blue-green .secondary-background--overlay {
    background-color: rgba(4, 167, 119, 0.67);
    color: #fff;
}

.blue-green .secondary-background--light-overlay {
    background-color: rgba(4, 167, 119, 0.2);
    color: #fff;
}

.blue-green .secondary-background--solid {
    background-color: rgba(4, 167, 119, 1);
    color: #fff;
}

.blue-green input:checked + label{
    background-color: rgba(4, 167, 119, 0.7);
}

.blue-green a {
    color: #fff;
}

.blue-green .icon {
    fill: #fff;
}

/*********** ORANGE/YELLOW ***************/
.orange-yellow .main-background-overlay{
    background-color: rgba(234, 80, 21, 0.67);
    color: #fff;
}

.orange-yellow .main-background--solid{
    background-color: rgba(234, 80, 21, 1);
    color: #fff;
}

.orange-yellow li:before, .orange-yellow .li {
    color: rgb(234, 80, 21);
}

.orange-yellow .secondary-background--overlay {
    background-color: rgba(255, 188, 10, 0.67);
    color: #6d3131;
}

.orange-yellow .secondary-background--light-overlay {
    background-color: rgba(255, 188, 10, 0.2);
    color: #6d3131;
}

.orange-yellow .secondary-background--solid {
    background-color: rgba(255, 188, 10, 1);
    color: #6d3131;
}

.orange-yellow input:checked + label{
    background-color: rgba(255, 188, 10, 0.7);
}

.orange-yellow a {
    color: #fff;
}

.orange-yellow .icon {
    fill: #fff;
}

/*********** PINK/BLUE ***************/
.pink-blue .main-background-overlay{
    background-color: rgba(247, 63, 142, 0.67);
    color: #fff;
}

.pink-blue .main-background--solid{
    background-color: rgba(247, 63, 142, 1);
    color: #fff;
}

.pink-blue li:before, .pink-blue .li {
    color: rgb(247, 63, 142);
}

.pink-blue .secondary-background--overlay {
    background-color: rgba(0, 98, 164, 0.67);
    color: #fff;
}

.pink-blue .secondary-background--light-overlay {
    background-color: rgba(0, 98, 164, 0.2);
    color: #fff;
}

.pink-blue .secondary-background--solid {
    background-color: rgba(0, 98, 164, 1);
    color: #fff;
}

.pink-blue input:checked + label{
    background-color: rgba(0, 98, 164, 0.7);
}

.pink-blue a {
    color: #fff;
}

.pink-blue .icon {
    fill: #fff;
}

/*************************************/

.grey-font{
    color: #4f4f4f;
}

.grey-background{
    background-color:#F2F2F2;
}
.margin-0-auto{
    margin: 0 auto;
}
.finish-page-image{
    background-image: url("/img/paper-plane-white.png");
}
.top-20-margin-auto{
    margin: 0 auto;
    top: 20%;
}

.right-side-radius{

}

.left-side-radius{
    border-radius:3rem 0 0 3rem  ;
}

ol {
    list-style: none;
    padding-left: 0;
}
li {
    counter-increment: item;
    margin-bottom: 5px;
}
li:before, .li {
    content: counter(item);
    text-align: center;
    display: inline-block;
    font-size: 1.5rem;
}

label:hover {
    background-color: #E0E0E0;
}


.grey-font{
    color: #4f4f4f;
}

.top-20-margin-auto{
    margin: 0 auto;
    top: 20%;
}

.close:hover,
.close:focus {
    color: #333333;
    text-decoration: none;
    cursor: pointer;
}

.colourHeader{
    text-align: center;
    color: black;
}

/* styling the colours of the colour palette*/
.yellow {
    background-color: #FFBC0A;
}

.red {
    background-color: #EC0868;
}
.darkBlue {
    background-color: #2E294E;
}
.darkGreen {
    background-color: #04A777;
}

.turquoise {
    background-color: rgb(16, 165, 165);
}

.purple {
    background-color: rgb(159, 73, 235);
}
.orangeYellow{
    background-color: #EA5015;
}

.orangePink{
    background-color: #F70062;
}

.pink{
    background-color: #F73F8E;
}
.blue{
    background-color: #0062A4;
}

.color-themes--selector {
    background-color: inherit;
    border: none;
}
.error {
    color: #e8624c;
    border: 2px solid #e8624c;
}
.success {
    color: #3fbf49;
    border: 2px solid #3fbf49;
}

.speech-triangle:before {
    content: ' ';
    position: absolute;
    width: 0;
    height: 0;
    left: 80px;
    right: auto;
    top: auto;
    bottom: 80px;
    border: 20px solid;
    border-color: #666 transparent transparent #666;
}

.speech-box {
    border: 20px solid #666;
}

